# spring_pipeline

./: .gitignore  eis_pipeline_goals_for__jake_plan.md
GKG_Tests/: TEST_RUN_1_APOLLO.md  TEST_RUN_2_HARLEM_AVE.md  harlem_v2.json
May25/people_pipeline/: PIPELINES.md  README.md  critic.py  extract.py  merge.py  run.py  settings.py  verify.py
May25/segment_a/: README.md  chunk.py  config.py  critic.py  grading.py  llm.py  m1.py  m2.py  nul.py  run.py  selection.py
Old/: inter_agent_plan.md  prev_context.md  tieredcritic.patch  ultraplan.md  v1_multiagent_plan.md
Old/GKG_Tests/: TEST_RUN_3_HARLEM_V2.md  apollo_result.json  harlem_ave_result.json  harlem_v3.json
Old/about_pipeline/: PIPELINE_OVERVIEW.md  PROMPTS.md
Old/eis_pipeline/: fetch_data.py  inspect_layout.py
Old/merged_pipeline/: CHANGES.md  description.md  run.py
Old/v1_multiagent_pipeline/: .gitignore  README.md  requirements.txt  run.py
about_pipeline/: PIPELINE_PLAN.md
eis_pipeline/: pyproject.toml  requirements.txt  run.py
eis_pipeline/pipeline/: config.py  io_layer.py  llm_client.py  stage0_triage.py  stage1_chunking.py
eis_pipeline/pipeline/stage2_fields/: alternatives.py  current_status.py  historical_external.py  retrieval.py  summary.py
eis_pipeline/tests/fixtures/P0491_TEST0000000001/CONFIDENCES/: TEST0000000001_00000002.json
eis_pipeline/tests/fixtures/P0491_TEST0000000001/TXT/: TEST0000000001_00000001.txt
merged_pipeline/GKG_Tests/: 01_castaic_haskell.json
merged_pipeline/claude_tests/: test_end_to_end.py  test_grouping.py  test_retrieval.py  test_stage3a.py
(+196 files in other folders)
