[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "eis_pipeline"
version = "1.0.0"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "pydantic>=2.0",
    "spacy>=3.7",
    "rapidfuzz>=3.6",
    "geopy>=2.4",
    "lxml>=5.0",
    "pyyaml>=6.0",
    "boto3>=1.34",
    "tenacity>=8.2",
    "tiktoken",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["pipeline*"]
